# DocForge-Enterprise

./: Info.md  LICENSE  README.md  bewertung.md  pyproject.toml
configs/: docforge.example.toml
docs/: ARCHITECTURE.md  EMBEDDED_MYCELIADB.md  I18N_LANGUAGE.md  OPERATIONS.md  PIPELINE_INTEGRITY.md  PROFILES_AND_TRANSPARENCY.md  README.md  SCALING_UPGRADES.md  SECURITY_HARDENING.md  TIMEOUT_RESILIENCE.md  WEBGUI.md  WEBGUI_LOGS.md  WEBGUI_SESSION_FIX.md  code_dump_docforge_enterprise_v5_0_8.md
examples/: enterprise_documentation.html  enterprise_documentation.md  fertige_dokumentation.md  jobs.md  logs.md  run_metadata.json
examples/sample_project/: README.md
examples/sample_project/src/: app.py  auth.py
scripts/: run_demo_embedded.sh  start_embedded_myceliadb.ps1  start_embedded_myceliadb.sh  start_webgui.ps1  start_webgui.sh
src/docforge_enterprise/: audit.py  cli.py  config.py  extractor.py  hashing.py  lmstudio.py  models.py  pipeline.py  prompts.py  renderer.py  resilience.py  security.py  semantic_index.py  sharding.py  store.py  webgui.py
src/docforge_enterprise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/myceliadb_embedded/: __init__.py  auth_store.py  cli.py  gateway.py
src/smql_embedding_adapter/: __init__.py  adapter.py  attractor.py  chunking.py  cli.py  config.py  embeddings.py  exceptions.py  lmstudio.py  merkle.py  mycelia_client.py  opencl.py  sealed_abi.py  server.py  smql.py  store.py  types.py  vector_math.py
tests/: test_embedded_myceliadb.py  test_extractor.py  test_json_recovery.py  test_pipeline_dryrun.py  test_pipeline_integrity_store.py  test_security.py  test_sharding.py  test_webgui.py
