[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "docforge-enterprise"
version = "5.0.8"
description = "Local-first enterprise documentation generator with LM Studio, embedded MyceliaDB, audit validation and hardened professional WebGUI and pipeline integrity checks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
docforge-enterprise = "docforge_enterprise.cli:main"
dfe = "docforge_enterprise.cli:main"
docforge-webgui = "docforge_enterprise.webgui:main"
dfe-web = "docforge_enterprise.webgui:main"
embedded-myceliadb = "myceliadb_embedded.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
